instructions.InstructionsDrawG.scala.error
Compilation error:
InstructionsDrawG:1: error: not found: type Blue
setCouleurBrosse(c:Blue)
                   ^InstructionsDrawG:1: error: not found: value c
setCouleurBrosse(c:Blue)
                 ^